# d4lf-zhTW

./: AUTO_UPDATE_SETUP.md  INSTALL_zhTW.md  README.md  README_upstream.md  README_zhTW.md  _QUICK_START.md  build.py  pyproject.toml  setup.ps1  setup.sh  zhTW_source_changes.patch
.github/workflows/: build-and-release.yml
assets/lang/enUS/: How to add to these files.md  affixes.json  aspects.json  corrections.json  item_types.json  paragon_maxroll_ids.json  sigils.json  tributes.json  uniques.json
assets/lang/zhTW/: affixes.json  aspects.json  corrections.json  item_types.json  sigils.json  tooltips.json  tributes.json  uniques.json
src/: __init__.py  autoupdater.py  cam.py  dataloader.py  logger.py  loot_mover.py  main.py  paragon_overlay.py  startup_messages.py  template_finder.py  tts.py
src/config/: data.py  helper.py  loader.py  models.py  ui.py
src/gui/: activity_log_widget.py  collapsible_widget.py  config_tab.py  config_window.py  d4lfitem.py  dialog.py  importer_window.py  profile_editor_window.py  profile_tab.py  themes.py  unified_window.py
src/gui/importer/: d4builds.py  diablo_trade.py  gui_common.py  importer_config.py  maxroll.py  mobalytics.py  paragon_export.py
src/gui/profile_editor/: affixes_tab.py  aspect_upgrades_tab.py  profile_editor.py  sigils_tab.py  tributes_tab.py  uniques_tab.py
src/item/: filter.py  find_descr.py  models.py
src/item/data/: affix.py  aspect.py  item_type.py  seasonal_attribute.py
src/item/descr/: read_descr_tts.py  text.py  texture.py
src/scripts/: __init__.py  common.py  handler.py  loot_filter_tts.py  vision_mode_fast.py  vision_mode_with_highlighting.py
src/tools/: gen_data.py  gen_data_zhTW.py
src/tools/data/: custom_affixes_enUS.json  custom_sigils_enUS.json
src/ui/: char_inventory.py  inventory_base.py  menu.py  stash.py  vendor.py
src/utils/: custom_mouse.py  image_operations.py  misc.py  process_handler.py  roi_operations.py  window.py
tests/: conftest.py  template_finder_test.py
tests/config/: loader_test.py  models_test.py  ui_test.py
tests/config/data/: sigils.py
tests/gui/importer/: test_d4builds.py  test_diablo_trade.py  test_gui_common.py  test_maxroll.py  test_mobalytics.py
tests/item/: read_descr_season6_tts_test.py  read_descr_season8_tts_test.py  read_descr_season_11_tts_test.py  read_descr_season_12_tts_test.py  read_descr_season_13_tts_test.py
tests/item/filter/: filter_test.py
tests/item/filter/data/: affixes.py  aspects.py  filters.py  items.py  sigils.py  tributes.py  uniques.py
tests/ui/: chest_test.py
tests/utils/: image_operations_test.py  roi_operations_test.py
tts/: install_dll.cmd  saapi.cpp  saapi.h
